deployment_two.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-two
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wa-2
  template:
    metadata:
      labels:
        app: wa-2
    spec:
      containers:
      - name: wa-2
        image: devopsworkslab/intelli-hello-world:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: config-volume
          mountPath: /var/www/html
        ports:
        - containerPort: 80
      volumes:
      - name: config-volume
        configMap:
          name: cm-web-two
